fixes: border not visible on hover

--- a/storefront/css/ProductListItem_base.css
+++ b/storefront/css/ProductListItem_base.css
@@ -9,7 +9,7 @@
 
     /*max-height:370px;*/
 
-    box-sizing:border-box;
+    box-sizing:content-box;
 
     margin-bottom:1.5em;
     margin-left:0.5em;
